--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,29 @@
-
 {
-    "builds": [{
-        "src": "PORTFOLIO/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
+    "builds": [
+        {
+            "src": "PORTFOLIO/wsgi.py",
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9"
+            }
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/python",
+            "config": {
+                "distDir": "staticfiles"
+            }
+        },
+    ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1/"
+        },
         {
             "src": "/(.*)",
             "dest": "PORTFOLIO/wsgi.py"
-        }
+        },
     ]
 }
