--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dj-database-url==1.0.0
 fpdf==1.7.2
 gunicorn==20.1.0
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-dateutil==2.8.2
 pytz==2022.2.1
 reportlab==3.6.11
