--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 dj-database-url==1.0.0
 fpdf==1.7.2
-psycopg2-binary==2.9.6
+psycopg2==2.9.6
 python-dateutil==2.8.2
 pytz==2022.2.1
 s3transfer==0.6.0
