versal working, database added. everything works fine

--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,8 @@
     ],
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "static/$1/"
+            "src": "./staticfiles/(.*)",
+            "dest": "staticfiles/$1/"
         },
         {
             "src": "/(.*)",
